[Docs] chore: complete guides section, fix scrolling position when 'collapse' code block (#128)
* chore: updates overview section

* feat: releases page

* fix build

* chore: finish styling

* add: highlight line

* fix: scroll to original position when closing tabs

* fix: remove warning thrown due to missing props `refElement`

* remove transition, fix positiing

* finished up animation, composition

* fix: toc bug

* add: ssr.md

* fix: warning error

* fix missing out on removing '.'

---------

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -6,33 +6,27 @@
 
 :root {
   /* DocSearch */
-  --docsearch-primary-color: $dt('color.primary.500') !important;
+  --docsearch-primary-color: $dt("color.primary.500") !important;
 }
 
 .dark:root {
   color-scheme: dark;
   /* DocSearch */
-  --docsearch-primary-color: $dt('color.primary.500') !important;
+  --docsearch-primary-color: $dt("color.primary.500") !important;
   --docsearch-text-color: rgb(245, 246, 247);
   --docsearch-container-background: rgba(9, 10, 17, 0.8);
   --docsearch-modal-background: rgb(21, 23, 42);
-  --docsearch-modal-shadow: inset 1px 1px 0 0 rgb(44, 46, 64),
-    0 3px 8px 0 rgb(0, 3, 9);
+  --docsearch-modal-shadow: inset 1px 1px 0 0 rgb(44, 46, 64), 0 3px 8px 0 rgb(0, 3, 9);
   --docsearch-searchbox-background: rgb(9, 10, 17);
   --docsearch-searchbox-focus-background: #000;
   --docsearch-hit-color: rgb(190, 195, 201);
   --docsearch-hit-shadow: none;
   --docsearch-hit-background: rgb(9, 10, 17);
-  --docsearch-key-gradient: linear-gradient(
-    -26.5deg,
-    rgb(86, 88, 114) 0%,
-    rgb(49, 53, 91) 100%
-  );
-  --docsearch-key-shadow: inset 0 -2px 0 0 rgb(40, 45, 85),
-    inset 0 0 1px 1px rgb(81, 87, 125), 0 2px 2px 0 rgba(3, 4, 9, 0.3);
+  --docsearch-key-gradient: linear-gradient(-26.5deg, rgb(86, 88, 114) 0%, rgb(49, 53, 91) 100%);
+  --docsearch-key-shadow: inset 0 -2px 0 0 rgb(40, 45, 85), inset 0 0 1px 1px rgb(81, 87, 125),
+    0 2px 2px 0 rgba(3, 4, 9, 0.3);
   --docsearch-footer-background: rgb(30, 33, 54);
-  --docsearch-footer-shadow: inset 0 1px 0 0 rgba(73, 76, 106, 0.5),
-    0 -4px 8px 0 rgba(0, 0, 0, 0.2);
+  --docsearch-footer-shadow: inset 0 1px 0 0 rgba(73, 76, 106, 0.5), 0 -4px 8px 0 rgba(0, 0, 0, 0.2);
   --docsearch-logo-color: rgb(255, 255, 255);
   --docsearch-muted-color: rgb(127, 132, 151);
 }
@@ -44,10 +38,10 @@ body {
   overflow-y: scroll;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: $dt('docus.body.backgroundColor');
-  color: $dt('docus.body.color');
-  font-family: $dt('docus.body.fontFamily');
-  min-width: $dt('size.xs');
+  background-color: $dt("docus.body.backgroundColor");
+  color: $dt("docus.body.color");
+  font-family: $dt("docus.body.fontFamily");
+  min-width: $dt("size.xs");
 }
 
 .docus-scrollbars {
@@ -58,33 +52,37 @@ body {
   }
 
   & ::-webkit-scrollbar-track {
-    background: $dt('color.gray.100');
+    background: $dt("color.gray.100");
   }
 
   & ::-webkit-scrollbar-thumb {
     border-radius: 0.6em;
-    background: $dt('color.gray.300');
+    background: $dt("color.gray.300");
     &:hover {
-      background: $dt('color.gray.400');
+      background: $dt("color.gray.400");
     }
     &:active {
-      background: $dt('color.gray.500');
+      background: $dt("color.gray.500");
     }
   }
 
   &.dark {
     & ::-webkit-scrollbar-track {
-      background: $dt('color.gray.800');
+      background: $dt("color.gray.800");
     }
 
     & ::-webkit-scrollbar-thumb {
-      background: $dt('color.gray.700');
+      background: $dt("color.gray.700");
       &:hover {
-        background: $dt('color.gray.600');
+        background: $dt("color.gray.600");
       }
       &:active {
-        background: $dt('color.gray.500');
+        background: $dt("color.gray.500");
       }
     }
   }
+}
+
+.line.highlight {
+  @apply bg-neutral-800;
 }
